RESOLVED FIXED240178
[macOS] Content filter blocking shield is not displayed
https://bugs.webkit.org/show_bug.cgi?id=240178
Summary [macOS] Content filter blocking shield is not displayed
Per Arne Vollan
Reported 2022-05-06 11:34:38 PDT
Content filter blocking shield is not displayed on macOS for blocked URLs.
Attachments
Patch (1.86 KB, patch)
2022-05-06 11:46 PDT, Per Arne Vollan
ggaren: review+
Patch (1.87 KB, patch)
2022-05-06 15:11 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2022-05-06 11:34:55 PDT
Per Arne Vollan
Comment 2 2022-05-06 11:46:32 PDT
Geoffrey Garen
Comment 3 2022-05-06 14:09:52 PDT
Comment on attachment 458966 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=458966&action=review r=me > Source/WebCore/platform/cocoa/ContentFilterUnblockHandlerCocoa.mm:185 > + auto unblocked = false; > + callOnMainThread([decisionHandler, unblocked] { > + decisionHandler(unblocked); > + }); Can unblocked be a local variable rather than a captured variable here?
Per Arne Vollan
Comment 4 2022-05-06 15:02:25 PDT
(In reply to Geoffrey Garen from comment #3) > Comment on attachment 458966 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=458966&action=review > > r=me > > > Source/WebCore/platform/cocoa/ContentFilterUnblockHandlerCocoa.mm:185 > > + auto unblocked = false; > > + callOnMainThread([decisionHandler, unblocked] { > > + decisionHandler(unblocked); > > + }); > > Can unblocked be a local variable rather than a captured variable here? Yes, that is a good point, will fix. Thanks for reviewing!
Per Arne Vollan
Comment 5 2022-05-06 15:11:07 PDT
EWS
Comment 6 2022-05-06 17:02:58 PDT
Committed r293931 (250378@main): <https://commits.webkit.org/250378@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458976 [details].
Note You need to log in before you can comment on or make changes to this bug.